üretim sonu kayıtları düzenlendi

--- a/NOVA/Views/IsEmri/IsEmriPartials/IsEmri_TP.cshtml
+++ b/NOVA/Views/IsEmri/IsEmriPartials/IsEmri_TP.cshtml
@@ -185,7 +185,7 @@
 
                 var StokAdi = StokAdlari.filter(x => x.STOK_KODU == Stok).length > 0 ? StokAdlari.filter(x => x.STOK_KODU == Stok)[0].STOK_ADI : "-";
                 var RefStokAdi = StokAdlari.filter(x => x.STOK_KODU == RefStok).length > 0 ? StokAdlari.filter(x => x.STOK_KODU == RefStok)[0].STOK_ADI : "-";
-
+                
                 var IsEmirleriMakine = IsEmirleri.filter(x => x.MAK_KODU == Makine);
                 var IsEmirleriRefMakine = IsEmirleri.filter(x => x.MAK_KODU == RefMakine);
                 var Musteri = item.getElementsByTagName("select")[4].value;
@@ -204,7 +204,7 @@
                     if (RefMakine != "SEÇİNİZ")
                     {
                         var SonRefIsEmri = RefMakine + "23" + (IsEmirleriRefMakine[IsEmirleriRefMakine.length - 1].MAX_ISEMRINO).toString().padStart(6, '0') + (i + 1).toString().padStart(3, '0');
-
+                        
                         if (OlusturulanRefIsEmirleri.includes(SonRefIsEmri)) {
                             SonRefIsEmri = OlusturulanRefIsEmirleri[OlusturulanRefIsEmirleri.length - 1].substring(0, 12) + (parseInt(OlusturulanRefIsEmirleri[OlusturulanRefIsEmirleri.length - 1].substring(12, 15)) + 1).toString().padStart(3, '0');
                         }
@@ -226,6 +226,7 @@
                         REF_ISEMRINO: SonRefIsEmri,
                         REF_STOKOLCUSU: RefStokAdi,
                         ADET: PaketMiktari,
+                        REF_ADET: PaketMiktari,
                         AGIRLIK: Math.round(AdetAgirlik)
                     };
 
