--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -2022,11 +2022,12 @@
                      type: 'POST',
                      data: { "stokkodu": stok, "ISEMRINO": d[0].ISEMRINO, "SERI_NO": d[0].SERI_NO, "KULL_MIKTAR": d[0].KULL_MIKTAR, "mik2":  d[0].KULL_MIKTAR2 },
                         error: function (data) {
-
+                            console.log(data);
                             $("#progress2").hide();
                             $("#SiparisModal").modal('hide');
                         },
                              success: function (data) {
+                                 console.log(data);
                                  if (d[0].ISEMRINO.substring(0, 2) != 'MH') {
                                      if (d[0].KULL_MIKTAR != 0) {
                                          load(url);
@@ -2085,13 +2086,13 @@
                         }
                     })
                 } else {
-                    $.getJSON("http://192.168.2.13:83/api/ie/TOP/"+hat, function (data) {
-                        var isemri = data[0].ISEMRINO;
-                        var url = "//192.168.2.13:83/api/ie/USK/" + hat + "/" + stok + "/" + isemri + "/" + m1.toString().trim() + "/" + m2.toString().trim() + "/0";
+                    //$.getJSON("http://192.168.2.13:83/api/ie/TOP/"+hat, function (data) {
+                    //    var isemri = data[0].ISEMRINO;
+                        
+                    //})
+                    var url = "//192.168.2.13:83/api/ie/USK/" + hat + "/" + stok + "/" + isemri + "/" + m1.toString().trim() + "/" + m2.toString().trim() + "/0";
 
-                        load(url);
-                    })
-                    
+                    load(url);
                 }
             } else {
                 Swal.fire(
