üretim BK düzenlendi

--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -2037,7 +2037,7 @@
                         },
                              success: function (data) {
                                  console.log(data);
-                                 if (d[0].ISEMRINO.substring(0, 2) != 'MH') {
+                                 if (d[0].ISEMRINO.substring(0, 2) != 'MH' && d[0].ISEMRINO.substring(0, 2) != 'BK') {
                                      if (d[0].KULL_MIKTAR != 0) {
                                          load(url);
                                      } else {
@@ -2095,10 +2095,7 @@
                         }
                     })
                 } else {
-                    //$.getJSON("http://192.168.2.13:83/api/ie/TOP/"+hat, function (data) {
-                    //    var isemri = data[0].ISEMRINO;
-                        
-                    //})
+                   
                     var url = "//192.168.2.13:83/api/ie/USK/" + hat + "/" + stok + "/" + isemri + "/" + $("#miktar11").val().toString().trim() + "/" + $("#miktar22").val().toString().trim() + "/0";
                    
                     load(url);
